	  - Automated edits filter to history browser
	  - Number of threads is shown in the discussion tab for each item
	  - Boardmods can edit threads without updating the last edited field
	  - No more RSS feeds for changes (will be replaced with a notification
	    system in the future)
	  - Improved formsub interface
	  - Improved VN relation editor interface

1.23 - 2008-10-22 (r117)
	- Removed redirects for old revision URLs (the code wasn't very secure...)
	- Fixed bug when using unicode in the AJAX vn/producers/release search box
	- Added original title field to VN entries
	- Fixed incorrect quoting in producer select form
	- Improved display of original titles

1.22 - 2008-08-29 (r106)
	- Inverted vote graph
	- Relation graph image maps are now stored in the DB
	- Properly fixed the command synchronisation issues with Multi
	- Fixed display of wrong ID in the screenshot diff
	- Fixed bug with the infinite thumbnail generation message when the server
	  doesn't respond within one second.
	- Rewrote VNDB::Util::DB::sqlprint to use server-side prepared statements
	- Added two new foreign key constraints:
	    changes (causedby) -> changes (id)
	    threads (id, count) -> threads_posts (tid, num)
	- Converted relation graphs to PNG
	- Added link between screenshots and releases

1.21 - 2008-08-16 (r90)
	- Added !vn and !uptime commands to Multi::IRC
	- Added realtime IRC notifications for actions on the site
	- Added screenshots to VNs
	- Rewrote Multi::Image
	- Renamed the 'anime check' command to 'anime' for consistency
	- Moved to PostgreSQL's boolean data type to store boolean data

1.20 - 2008-08-06 (r79)
	- Admins can change someone's username
	- Fixed the automatic relogin after changing password
	- Added lock indicator when browsing threads on a tag
	- Re-added the vote stats to VN pages
	- Searching for 'Chinese' doesn't select 'NES'
	- Place/time category order on VN pages is now consistent
	- Admins can delete users from the DB